[package]
name = "greenfund-contract"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["you"]

[lib]
path = "src/greenfund_contract.rs"

[dependencies.multiversx-sc]
version = "0.65.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"

[workspace]
members = [
    ".",
    "meta",
]
